# hsc-brkga-api

./: .gitignore  CMakeLists.txt
include/: BRKGA.h
